pc/me - WIP on yet another approach

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -26,3 +26,5 @@ spring.mvc.pathmatch.matching-strategy = ANT_PATH_MATCHER
 server.compression.enabled=false
 
 spring.mvc.format.date-time=iso
+
+# spring.jackson.default-property-inclusion=always
